--- a/files/en-us/learn/server-side/express_nodejs/deployment/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/deployment/index.html
@@ -77,8 +77,7 @@ tags:
 <p>There are numerous hosting providers that are known to either actively support or work well with <em>Node</em> (and <em>Express</em>). These vendors provide different types of environments (IaaS, PaaS), and different levels of computing and network resources at different prices.</p>
 
 <div class="notecard note">
-  <h4>Tip</h4>
-  <p>There are a lot of hosting solutions, and their services and pricing can change over time. While we introduce a few options below, it is worth checking both these and other options before selecting a hosting provider.</p>
+  <p><strong>Note:</strong> There are a lot of hosting solutions, and their services and pricing can change over time. While we introduce a few options below, it is worth checking both these and other options before selecting a hosting provider.</p>
 </div>
 
 <p>Some of the things to consider when choosing a host:</p>
@@ -324,8 +323,7 @@ Changes to be committed:
 </ol>
 
 <div class="notecard warning">
-  <h4>Warning</h4>
-  <p>In 2020 GitHub changed the default repo branch name to "main" (from "master"). If using an older/existing repository you might need to call <code>git push origin master</code> instead.</p>
+  <p><strong>Warning:</strong> In 2020 GitHub changed the default repo branch name to "main" (from "master"). If using an older/existing repository you might need to call <code>git push origin master</code> instead.</p>
 </div>
 
 <p>When this operation completes, you should be able to go back to the page on GitHub where you created your repo, refresh the page, and see that your whole application has now been uploaded. You can continue to update your repository as files change using this add/commit/push cycle.</p>
@@ -384,8 +382,7 @@ var mongoDB = <strong>process.env.MONGODB_URI</strong> || dev_db_url;
 
 <p>First, we will need to fetch our dependencies (you will recall we didn't copy the <strong>node_modules</strong> folder into our git tree). You can do this by running the following command in your terminal at the root of the project:</p>
 
-<pre class="brush: bash">npm install
-</pre>
+<pre class="brush: bash">npm install</pre>
 
 <p>Now run the site (see <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/routes#testing_the_routes">Testing the routes</a> for the relevant commands) and check that the site still behaves as you expect.</p>
 
